# slottle

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  throttle.rs  throttle_pool.rs
src/throttle/: algorithms.rs  interval.rs  mod.rs
