[package]
name = "slottle"
version = "0.1.1"
authors = ["visig <visig@protonmail.ch>"]
edition = "2018"

description = "A throttle pool library designed for thread-based concurrency."
keywords = ["throttle", "pool", "sync", "threading"]
categories = ["concurrency"]

license = "MIT"
homepage = "https://github.com/visig9/slottle"
repository = "https://github.com/visig9/slottle"


[dependencies]
std-semaphore = "0.1.0"
retry = { version = "1.1.0", optional = true }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
rayon = "1.5.0"

[features]
default = ["fuzzy_fns"]
retrying = ["retry"]
fuzzy_fns = ["rand"]

[package.metadata.docs.rs]
all-features = true
