[package]
name = "slottle"
version = "0.3.0"
authors = ["visig <visig@protonmail.ch>"]
edition = "2018"

description = "A throttle pool library designed for thread-based concurrency."
keywords = ["throttle", "sync", "threading"]
categories = ["concurrency"]

license = "MIT"
homepage = "https://github.com/visig9/slottle"
repository = "https://github.com/visig9/slottle"


[dependencies]
std-semaphore = "0.1.0"

[dev-dependencies]
rayon = "1.5.0"
rand = "0.8.0"
